WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130517
[GTK] Suppress errors about using gdk_threads_enter gdk_threads_leave
https://bugs.webkit.org/show_bug.cgi?id=130517
Summary
[GTK] Suppress errors about using gdk_threads_enter gdk_threads_leave
Martin Robinson
Reported
2014-03-20 09:49:40 PDT
These errors are false positives, since we actually need to use the APIs.
Attachments
Patch
(3.29 KB, patch)
2014-03-20 09:59 PDT
,
Martin Robinson
svillar
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2014-03-20 09:59:07 PDT
Created
attachment 227298
[details]
Patch
WebKit Commit Bot
Comment 2
2014-03-20 10:01:30 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Alberto Garcia
Comment 3
2014-03-20 11:34:50 PDT
(In reply to
comment #1
)
> Created an attachment (id=227298) [details] > Patch
lgtm, thanks!
Sergio Villar Senin
Comment 4
2014-03-20 11:43:51 PDT
Comment on
attachment 227298
[details]
Patch r=me. Consider adding a FIXME to the comments mentioning that all the deprecation warnings will be suppresed.
Sergio Villar Senin
Comment 5
2014-03-20 11:44:18 PDT
Comment on
attachment 227298
[details]
Patch errrr
Martin Robinson
Comment 6
2014-03-20 20:01:25 PDT
Committed
r166035
: <
http://trac.webkit.org/changeset/166035
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug