[GTK] Suppress errors about using gdk_threads_enter gdk_threads_leave https://bugs.webkit.org/show_bug.cgi?id=130517

Reviewed by Sergio Villar Senin.

Source/WebCore:

* plugins/gtk/gtk2xtbin.c: Use GCC suppression to suppress errors about deprecations.

Source/WebKit2:

* UIProcess/API/gtk/WebKitWebView.cpp: Use GCC suppression to suppress errors about deprecations.
* UIProcess/gtk/WebPopupMenuProxyGtk.cpp: Ditto.

Canonical link: https://commits.webkit.org/148576@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166035 268f45cc-cd09-0410-ab3c-d52691b4dbfc